welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
while (!(posfinale())) {
^